Build: Bump to Java 22 and open native access